@@ -2,8 +2,6 @@
 ##  General TODO
 ################################################################################
 
-    * Allow user to specify a "use defaults" option to "perl Makefile.PL"
-    
     * Try generating HTML using CPAN style:
       - "generated by TUCS::Pod2HTML v, using Pod::Simple::PullParser v2.02"
 
@@ -343,4 +341,8 @@
 ################################################################################
 
     * Tests
+
+################################################################################
+##  General Ideas
+################################################################################
 
